--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,4 @@
-version: '3.3'
+version: '3.7'
 services:
   db:
     image: mysql:latest
@@ -14,5 +14,7 @@ services:
       - '3306'
     volumes:
       - my-db:/var/lib/mysql
+#  setup:
+#    build: .
 volumes:
   my-db:
